# Doodle-Jump-Game-Engine

./: .clang-format  .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md  Random.cpp  Random.h  Untitled Diagram.drawio  main.cpp
.circleci/: config.yml
Models/: Entity.cpp  Entity.h  Jetpack.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Spring.h
cmake/Modules/: FindSFML.cmake
cmake/modules/: FindSFML.cmake
doc/: Doxyfile
doc/docsDoxygen/docs_html/: _background_view_8h_source.html  _bonus_8h_source.html  _bonus_controller_8h_source.html  _bonus_view_8h_source.html  _concrete_factory_8h_source.html  _entity_8h_source.html  _high_score_8h_source.html  _i_controller_8h_source.html  _i_visitor_8h_source.html  _jetpack_8h_source.html  _platform_8h_source.html  _player_view_8h_source.html  _resourcemanager_8h_source.html  _score_8h_source.html  _settings_8h_source.html  _static_platform_8h_source.html  _stopwatch_8h_source.html  _vertical_platform_8h_source.html  class_controller_1_1_bonus_controller.html  class_controller_1_1_i_controller.html  class_controller_1_1_player_controller-members.html  class_event-members.html  class_event.html  class_game.html  class_high_score-members.html  class_high_score.html  (+67 more)
docs/: Doxyfile  index.html  index.md  report.tex
docs/docs_html/: _abstract_factory_8h_source.html  _background_8h_source.html  _background_view_8h_source.html  _bonus_8h_source.html  _bonus_controller_8h_source.html  _bonus_view_8h_source.html  _camera_8h_source.html  _coin_8h_source.html  _concrete_factory_8h_source.html  _entity_8h_source.html  _events_8h_source.html  _exception_8h_source.html  _game_8h_source.html  _high_score_8h_source.html  _horizontal_platform_8h_source.html  _i_controller_8h_source.html  _i_view_8h_source.html  _i_visitor_8h_source.html  _item_8h_source.html  _jetpack_8h_source.html  _menu_state_8h_source.html  _observer_8h_source.html  _platform_controller_8h_source.html  _platform_view_8h_source.html  _play_state_8h_source.html  _player_8h_source.html  _player_controller_8h_source.html  _player_view_8h_source.html  _random_8h_source.html  _resource_manager_8h_source.html  _score_8h_source.html  _score_view_8h_source.html  _setting_state_8h_source.html  _settings_8h_source.html  _shop_state_8h_source.html  _spring_8h_source.html  _state_8h_source.html  _static_platform_8h_source.html  _stopwatch_8h_source.html  _subject_8h_source.html  (+512 more)
docs/docs_latex/: _abstract_factory_8h_source.tex  _background_8h_source.tex  _background_view_8h_source.tex  _bonus_8h_source.tex  _bonus_controller_8h_source.tex  _bonus_view_8h_source.tex  _camera_8h_source.tex  _coin_8h_source.tex  _concrete_factory_8h_source.tex  _entity_8h_source.tex  _events_8h_source.tex  _exception_8h_source.tex  _game_8h_source.tex  _high_score_8h_source.tex  _horizontal_platform_8h_source.tex  _i_controller_8h_source.tex  _i_view_8h_source.tex  _i_visitor_8h_source.tex  _item_8h_source.tex  _jetpack_8h_source.tex  _menu_state_8h_source.tex  _observer_8h_source.tex  _platform_controller_8h_source.tex  _platform_view_8h_source.tex  _play_state_8h_source.tex  _player_8h_source.tex  _player_controller_8h_source.tex  _player_view_8h_source.tex  _random_8h_source.tex  _resource_manager_8h_source.tex  _score_8h_source.tex  _score_view_8h_source.tex  _setting_state_8h_source.tex  _settings_8h_source.tex  _shop_state_8h_source.tex  _spring_8h_source.tex  _state_8h_source.tex  _static_platform_8h_source.tex  _stopwatch_8h_source.tex  _subject_8h_source.tex  (+300 more)
engine/: CMakeLists.txt
engine/include/: AbstractFactory.h  Event.h  HighScore.h  IVisitor.h  Observer.h  Score.h  Settings.h  Subject.h  World.h  json.hpp
engine/include/controller/: BonusController.h  IController.h  PlatformController.h  PlayerController.h
engine/include/model/: Background.h  Bonus.h  Coin.h  Entity.h  HorizontalPlatform.h  Jetpack.h  Platform.h  Player.h  Score.h  Spring.h  StaticPlatform.h  TemporaryPlatform.h  VerticalPlatform.h
engine/include/observer/: Event.h  Events.h  Observer.h  Subject.h
engine/include/util/: Camera.h  Collision.h  Exception.h  Random.h  Stopwatch.h  Utilities.h
engine/src/: AbstractFactory.cpp  HighScore.cpp  IVisitor.cpp  Score.cpp  Subject.cpp  World.cpp
engine/src/controller/: BonusController.cpp  IController.cpp  PlatformController.cpp  PlayerController.cpp
engine/src/model/: Background.cpp  Bonus.cpp  Entity.cpp  HorizontalPlatform.cpp  Jetpack.cpp  Platform.cpp  Player.cpp  Score.cpp  Spring.cpp  StaticPlatform.cpp  TemporaryPlatform.cpp  VerticalPlatform.cpp
engine/src/util/: Camera.cpp  Collision.cpp  Exception.cpp  Random.cpp  Stopwatch.cpp  Transform.cpp  Utilities.cpp
game/: CMakeLists.txt
game/include/: ConcreteFactory.h  EnterScoreState.h  Game.h  GameState.h  MenuState.cpp  MenuState.h  State.h
game/include/state/: EnterScoreState.h  Item.h  MenuState.h  PlayState.h  SettingState.h  ShopState.h  State.h
game/include/util/: ResourceManager.h  Resourcemanager.h
game/include/view/: BackgroundView.h  BonusView.h  IView.h  PlatformView.h  PlayerView.h  ScoreView.h
game/src/: ConcreteFactory.cpp  Game.cpp
game/src/state/: EnterScoreState.cpp  MenuState.cpp  PlayState.cpp  SettingState.cpp  ShopState.cpp
game/src/util/: Resourcemanager.cpp
game/src/view/: BackgroundView.cpp  BonusView.cpp  IView.cpp  PlatformView.cpp  PlayerView.cpp  ScoreView.cpp
resource/: config.json  highscore.txt
src/: Camera.cpp  Game.cpp  Game.h  World.cpp  World.h  main.cpp
src/Controllers/: IController.cpp  IController.h  PlayerController.cpp  PlayerController.h
src/Entity/: Bonus.cpp  Bonus.h  Entity.cpp  Entity.h  Jetpack.cpp  Platform.h  Player.h  Spring.h
src/Models/: Entity.cpp  Entity.h  IObserver.h  Jetpack.h  Platform.cpp  Spring.cpp
src/Observer/: IObserver.cpp  Observable.cpp  Observable.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
src/Utils/: Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h  Transform.cpp  Transform.h
src/Views/: Bonus.cpp  Bonus.h  IView.cpp  IView.h  PlatformView.cpp  PlatformView.h  PlayerView.cpp  PlayerView.h
(+543 files in other folders)
